# glass-dl-3

./: README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build-windows-portable.yml
assets/sprites/: README.md
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tools/: README.txt
