[package]
name = "glass-dl"
version = "0.1.0"
description = "A lightweight glass UI for yt-dlp"
authors = ["Glass DL"]
edition = "2021"
rust-version = "1.88"

[lib]
name = "glass_dl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Keep Brotli's allocator crates on the same compatible 2.x API.
alloc-stdlib = "=0.2.2"
alloc-no-stdlib = "=2.0.4"
